# BrightestDungeon

./: .gitignore  BrightestDungeon.ino  CMakeLists.txt  LICENSE  README  README.md  platformio.ini  sdcard.sh  secret.py
cad/: README
cad/box/: Box.FCStd
cad/font/: README
cad/info/: infosheets.odp
cad/pcb/: PCB.json  README  Schematic.json
dng/: Create Dungeon.md  Entity Cheat Sheat.md  Runtime Settings.md  template.txt
dng/0/: README.md
dng/0 internal/: README
dng/0 internal/002/: 000.txt
dng/0 internal/005/: 000.txt  001.txt
dng/0 internal/006/: 000.txt  001.txt  002.txt
dng/0 internal/007/: 001.txt  003.txt
dng/0 internal/008/: 000.txt
dng/0 internal/009/: 002.txt
dng/0 internal/011/: 000.txt
dng/0 internal/012/: 000.txt
dng/0 internal/013/: 000.txt  001.txt
dng/1/: README
dng/2/: README.md
dng/3/: README.md
dng/4/: README
dng/5/: README.md
dng/6/: README.md
dng/7/: README
dng/8/: README.md
dng/9/: README.md
dng/a/: README.md
dng/b/: README.md
dng/c/: README.md
dng/d/: README  README.md
dng/e/: README
dng/f/: README
platform/: Platform.h  Porting.md
platform/atmega328p/: Platform.md
platform/simulator/: Platform.md
secret/: Character.cpp  Character.h  main.cpp
src/: Dungeon.cpp  Dungeon.h  Secret.h  Settings.h  main.cpp
src/level/: Floor.cpp  Floor.h  Options.cpp  Options.h  Pool.cpp  Pool.h  Room.cpp  Room.h
src/peripheral/: NBitArray.h  Pin.cpp  Pin.h  Timer.cpp  Timer.h
src/simulator/: Simulator.cpp  Simulator.h
src/util/: Math.cpp  Math.h  Random.cpp  Random.h  Timer.cpp
(+133 files in other folders)
